styles.css
@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@400;700&display=swap");

:root {
  box-sizing: border-box;
  font-family: "Open Sans", sans-serif;
  font-size: 14px;
  color: hsl(0, 0%, 100%);
}

*,
::before,
::after {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
}

body {
  background-color: hsl(217, 28%, 15%);
  position: relative;
}

h1,
h2,
h3 {
  font-family: "Raleway", sans-serif;
}

.header-container {
  background-image: url(images/bg-curvy-mobile.svg);
  background-repeat: no-repeat;
  background-size: contain;
  background-position: bottom 8em right 0;
}

@media (min-width: 50em) {
  .header-container {
    background-image: url(images/bg-curvy-desktop.svg);
    background-repeat: no-repeat;
    background-position: bottom -5em right 0;
    background-size: contain;
    min-height: 100vh;
  }
}

.logo {
  height: 2em;
  margin: 1.5em;
}

.nav {
  margin-top: 1em;
  display: flex;
  align-items: center;
  margin-bottom: 3em;
}

.header-nav {
  margin-left: auto;
  padding-right: 1em;
}

.header-nav--item {
  padding: 0.5em;
  display: inline;
}

@media (min-width: 50em) {
  .logo {
    height: 2.5em;
    margin: 2em;
  }
  .header-nav--item {
    padding: 2em;
  }
}

.hero-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  padding-top: 3em;
  margin: 0 auto;
}

.hero-image {
  width: 80%;
}

.hero-title {
  margin: 1em 0;
  line-height: 1.5em;
}

.hero-content {
  margin-bottom: 1.5em;
}

.hero-button {
  padding: 1em;
  width: 80%;
  background-color: hsl(176, 68%, 64%);
  border-radius: 2em;
}

@media (min-width: 50em) {
  .hero-container {
    max-width: 50em;
    padding: 0;
  }
  .hero-title {
    font-size: 2.5rem;
    max-width: 30em;
  }
  .hero-content {
    font-size: 1.2rem;
    line-height: 2rem;
    max-width: 30em;
  }
  .hero-button {
    font-size: 1.2rem;
    width: 40%;
  }
}

.background-colour-container {
  margin-top: -8em;
  padding-top: 8em;
  background-color: hsl(218, 28%, 13%);
}

@media (min-width: 50em) {
  .background-colour-container {
    margin-top: 0;
  }
}

.features-container {
  display: grid;
  grid-template-columns: 1fr;
  padding: 3em;
  text-align: center;
}

.feature {
  margin: 2em 0;
}

.feature-icon {
  padding: 2em;
}

@media (min-width: 50em) {
  .features-container {
    font-size: 1.2em;
    width: 60%;
    grid-template-columns: 1fr 1fr;
    gap: 20%;
    justify-items: center;
    margin: 0 auto;
  }
}

.jumbo-container {
  padding: 2em;
  margin-bottom: 5em;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.jumbo-image {
  width: 80%;
}

.jumbo-title {
  text-align: center;
  margin-top: 1.5em;
}

.jumbo-content {
  line-height: 1.7em;
  margin: 1.5em 0;
}

.jumbo-link {
  text-underline-offset: 0.5em;
  color: hsl(176, 68%, 64%);
  text-decoration: underline;
}

@media (min-width: 50em) {
  .jumbo-container {
    margin-top: 5em;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    font-size: 1.2em;
    padding: 5em;
    margin: 5em auto;
    max-width: 80em;
  }
  .jumbo-content-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin-left: 3em;
  }
  .jumbo-title {
    text-align: left;
    font-size: 2.5em;
  }
}

.testimonial-container {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 2em;
  padding: 3em;
  position: relative;
  z-index: 1;
}

.quotation {
  position: absolute;
  left: 3em;
  z-index: -1;
}

.testimonial-box {
  padding: 2em;
  background-color: hsl(219, 30%, 18%);
}

.testimonial-content {
  margin-bottom: 2em;
}

.testimonial-bottom-container {
  display: flex;
  align-items: center;
  line-height: 1.3em;
}

.testimonial-profile-picture {
  height: 4em;
  border-radius: 50%;
  margin-right: 1em;
}

.testimonal-profile-name {
  font-size: 0.8em;
}

.testimonial-profile-position {
  font-size: 0.8em;
}

@media (min-width: 50em) {
  .testimonial-container {
    grid-template-columns: repeat(3, 1fr);
    padding: 0 10em 0 10em;
  }
  .quotation {
    top: -2.5em;
    left: 9em;
  }
}

.cta-container {
  background-color: hsl(219, 30%, 18%);
  text-align: center;
  padding: 3em;
  margin: 0 2em;
  border-radius: 10px;
  box-shadow: 5px 5px 10px black;
  transform: translateY(50%);
  margin-top: -5em;
}

.cta-title {
  padding-bottom: 1em;
}

.cta-content {
  padding-bottom: 1em;
}

.cta-input {
  color: lightgray;
  padding: 0.6em;
  border-radius: 1.5em;
  width: 80%;
  margin: 1em 0;
}

.cta-button {
  background-color: hsl(176, 68%, 64%);
  padding: 0.6em;
  border-radius: 1.5em;
  width: 80%;
  margin: 0 auto;
}

@media (min-width: 50em) {
  .cta-container {
    padding: 3em;
    max-width: 60em;
    margin: 0 auto;
  }
  .cta-title {
    font-size: 2.5em;
  }
  .cta-content {
    font-size: 1.2em;
  }
  .cta-contact-container {
    display: flex;
    align-items: center;
    gap: 1.5em;
  }
  .cta-button {
    padding: 1em;
    flex: 1;
  }
  .cta-input {
    text-indent: 10px;
    padding: 1em;
    flex: 2;
  }
}

footer {
  padding-top: 15em;
  background-color: hsl(216, 53%, 9%);
}

.footer-logo {
  margin: 2em;
}

.footer-content-container {
  padding: 2em;
}

.footer-content {
  margin-bottom: 1em;
}

.footer-nav-container {
  list-style-type: none;
  padding: 2em;
}

.footer-socials-container {
  display: flex;
  justify-content: center;
}

.footer-contact-container {
  display: flex;
}

.footer-contact-icon {
  height: 1em;
  width: 1em;
  margin-right: 1em;
}

.socials-border-box {
  width: 2em;
  height: 2em;
  border: 1px solid white;
  border-radius: 50%;
  margin: 0 0.5em 8em 0.5em;
  display: flex;
  justify-content: center;
  align-items: center;
}

@media (min-width: 50em) {
  footer {
    padding: 15em 5em 0 5em;
  }
  .footer-container {
    display: flex;
    justify-content: space-between;
    padding: 6em 0;
    max-width: 120em;
    margin: 0 auto;
    position: relative;
  }
  .footer-logo {
    position: absolute;
    top: 0;
    left: 0;
    margin: 0;
  }
  .footer-content-container {
    display: flex;
    column-gap: 8em;
    padding: 0;
  }
  .footer-location-content {
    flex: 1;
  }
  .footer-contact-content {
    flex: 1;
  }
  .footer-nav-container {
    padding: 0;
  }
  .footer-links-container {
    display: grid;
    grid-template-columns: 1fr 1fr 2fr;
    gap: 5em;
  }
}

.attribution {
  text-align: center;
  position: absolute;
  bottom: 1em;
  right: 50%;
  transform: translateX(50%);
}

